# DIVE

./: .gitignore  AGENTS.md  CHANGELOG.md  DIVE_DECISIONS.md  DIVE_PLAN.md  DIVE_SPEC.md  LICENSE  PHASE3_HANDOFF.md  PHASE4_HANDOFF.md  PHASE5_HANDOFF.md  PHASE6_HANDOFF.md  RALPH_PROMPT.md  README.md  THIRD-PARTY-NOTICES.md  ralph_run.ps1  ralph_run.sh
.github/workflows/: build.yml  release-gate.yml  release.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
codex_prompts/: 01_bootstrap.md  02_design_system.md  03_sqlite_schema.md  04_provider_trait.md  05_keyring_auth.md  06_app_shell.md  07_workmap_tile.md  08_chat_stream.md  09_agent_loop.md  10_permission_card.md  11_slide_in_panel.md  12_dive_gate_d.md  13_dive_gate_full.md  14_verify_stage.md  15_checkpoint.md  16_blocklist.md  17_openrouter_keys.md  18_export.md  19_onboarding.md  20_settings.md  21_error_handling.md  22_polish.md  23_pilot_validation.md  24_manuals.md  25_codex_oauth.md  26_mcp_client.md  27_mcp_permission.md  28_prompt_helper.md  29_pre_send_check.md  30_v03_integration.md  31_i18n.md  32_a11y.md  33_a11y_polish.md  34_packaging.md  35_release.md  36_user_docs.md  INDEX.md
dive/: .editorconfig  .gitignore  .prettierignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts  vitest.config.ts
dive/src-tauri/: Cargo.toml  tauri.conf.json
dive/src-tauri/capabilities/: default.json
dive/src-tauri/scripts/: verify-release-mock-guard-fixture-test.sh  verify-release-mock-guard.sh
dive/src-tauri/src/: http_client.rs  lib.rs  main.rs  menu.rs  pi_sidecar.rs  telemetry.rs
dive/src-tauri/src/agent/: error.rs  event.rs  mod.rs  permission.rs
dive/src-tauri/src/auth/: codex_oauth.rs  error.rs  mod.rs  openrouter_provisioning.rs  scope.rs
dive/src-tauri/src/checkpoint/: mod.rs
dive/src-tauri/src/db/: error.rs  migrations.rs  mod.rs  models.rs  schema.rs
dive/src-tauri/src/db/dao/: card.rs  checkpoint.rs  event_log.rs  interview.rs  interview_turn.rs  message.rs  mod.rs  plan.rs  plan_mutation.rs  prd.rs  project.rs  provider_config.rs  session.rs  step.rs  step_session_mapping.rs  tool_call.rs  workmap.rs
dive/src-tauri/src/dive/: approval.rs  assist.rs  card_metrics.rs  event_log.rs  gate.rs  mod.rs  plan_form_consistency.rs  plan_interview.rs  plan_quality_constants.rs  plan_router.rs  prompt_check.rs  prompt_locale.rs  state_machine.rs  supervisor.rs  verification_coach.rs  verify.rs
dive/src-tauri/src/dive/supervisor/: card.rs  context.rs  decision.rs  evidence.rs  mod.rs  prompt.rs  tests.rs
dive/src-tauri/src/export/: anonymize.rs  mod.rs
dive/src-tauri/src/ipc/: assist.rs  cards.rs  chat.rs  checkpoint.rs  codex_oauth.rs  events.rs  mcp.rs  mod.rs  policy.rs  preview.rs  project.rs  provider.rs  provider_runtime.rs  provocation.rs  provocation_agent.rs  session.rs  state.rs  tests.rs  timeline.rs  ui_events.rs  verification_coach.rs  workmap.rs  workspace_plan.rs
dive/src-tauri/src/ipc/workspace_plan/: commands.rs  dashboard.rs  mod.rs  plan_lifecycle.rs  plan_routing.rs  plan_steps.rs  prd_core.rs  prd_interview.rs  prd_patch.rs  quality_gate.rs  roadmap.rs  types.rs
dive/src-tauri/src/mcp/: client.rs  dao.rs  mod.rs  registry.rs  tool_adapter.rs  transport.rs
dive/src-tauri/src/pi_sidecar/: command.rs  credential.rs  model_registry.rs  parity.rs  protocol.rs  runtime_state.rs  tests.rs  transport.rs
dive/src-tauri/src/providers/: error.rs  factory.rs  mock.rs  mod.rs  retry.rs  sse.rs  types.rs
dive/src-tauri/src/providers/anthropic/: convert.rs  mod.rs  stream.rs
dive/src-tauri/src/providers/codex/: mod.rs
dive/src-tauri/src/providers/openai/: mod.rs  stream.rs
dive/src-tauri/src/tools/: bash.rs  context.rs  delete_file.rs  edit_file.rs  egress_guard.rs  emit_plan_draft.rs  fs_guard.rs  guard.rs  list_dir.rs  mkdir.rs  mod.rs  multi_replace.rs  process_exec.rs  read_file.rs  registry.rs  run_process.rs  runtime.rs  search_files.rs  terminal_script.rs  web_fetch.rs  write_file.rs
dive/src-tauri/src/workspace_plan/: artifacts.rs  mod.rs
dive/src-tauri/tests/: agent_loop.rs  ai_assist_engine.rs  card_state_machine.rs  chat_runtime.rs  checkpoint_engine.rs  connected_provider_smoke.rs  export_jsonl.rs  it_cards_persistence.rs  mcp_tool_integration.rs  openrouter_provisioning.rs  phase5_e2e.rs  preview_runtime.rs  prompt_check_engine.rs  providers_integration.rs  spec_status_docs.rs  terminal_script.rs  tool_guard.rs  verify_engine.rs  workspace_plan_artifacts.rs  workspace_plan_ipc.rs  workspace_prd_lifecycle.rs
docs/: a11y-contrast.md  dev-shell-verification.md  dive-release-defects-master-2026-06-14.md  dive-release-dynamic-audit-2026-06-14.md  human-agency-implementation-map.md  packaging-windows.md  product-readiness-stage-audit-2026-05-30.md  release-audit-2026-06-14.md  release-blockers-merged-2026-06-14.md  spec-status.md  student-quickstart.md  teacher-manual.md  ui-ux-audit-2026-06-07.md  windows-build-guide.md
specs/: README.md
(+559 files in other folders)
