[package]
name = "dive"
version = "0.0.1"
description = "DIVE — AI 코딩 교육용 데스크톱 앱"
authors = ["CoreeLab"]
edition = "2021"
rust-version = "1.80"

[lib]
name = "dive_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
