[package]
name = "dive"
version = "0.0.1"
description = "DIVE — AI 코딩 교육용 데스크톱 앱"
authors = ["CoreeLab"]
edition = "2021"
rust-version = "1.80"

[lib]
name = "dive_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-util"] }
async-trait = "0.1"
futures = "0.3"
eventsource-stream = "0.2"
bytes = "1"
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "sync-secret-service"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
once_cell = "1"
git2 = { version = "0.18", default-features = false, features = ["vendored-libgit2"] }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "test-util"] }
tokio-stream = "0.1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
