[package]
name = "dive"
version = "1.0.0-rc.9"
description = "DIVE — AI 코딩 교육용 데스크톱 앱"
authors = ["CoreeLab"]
edition = "2021"
rust-version = "1.80"

[features]
default = []
dev-mock = []

[lib]
name = "dive_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
ipnet = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-util", "net"] }
async-trait = "0.1"
futures = "0.3"
eventsource-stream = "0.2"
bytes = "1"
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "sync-secret-service"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
once_cell = "1"
git2 = { version = "0.18", default-features = false, features = ["vendored-libgit2"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security_Cryptography"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "test-util"] }
tokio-stream = "0.1"

# These integration suites intentionally use the test-only MockProvider. Plain
# `cargo test` keeps them out of production/default builds; run
# `cargo test --features dev-mock` for the extended mock-provider coverage.
[[test]]
name = "agent_loop"
path = "tests/agent_loop.rs"
required-features = ["dev-mock"]

[[test]]
name = "ai_assist_engine"
path = "tests/ai_assist_engine.rs"
required-features = ["dev-mock"]

[[test]]
name = "card_state_machine"
path = "tests/card_state_machine.rs"
required-features = ["dev-mock"]

[[test]]
name = "chat_runtime"
path = "tests/chat_runtime.rs"
required-features = ["dev-mock"]

[[test]]
name = "connected_provider_smoke"
path = "tests/connected_provider_smoke.rs"
required-features = ["dev-mock"]

[[test]]
name = "it_cards_persistence"
path = "tests/it_cards_persistence.rs"
required-features = ["dev-mock"]

[[test]]
name = "mcp_tool_integration"
path = "tests/mcp_tool_integration.rs"
required-features = ["dev-mock"]

[[test]]
name = "phase5_e2e"
path = "tests/phase5_e2e.rs"
required-features = ["dev-mock"]

[[test]]
name = "prompt_check_engine"
path = "tests/prompt_check_engine.rs"
required-features = ["dev-mock"]

[[test]]
name = "preview_runtime"
path = "tests/preview_runtime.rs"
required-features = ["dev-mock"]

[[test]]
name = "tool_guard"
path = "tests/tool_guard.rs"
required-features = ["dev-mock"]

[[test]]
name = "verify_engine"
path = "tests/verify_engine.rs"
required-features = ["dev-mock"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
